apps/metatube/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metatube-redirect
spec:
  hostnames:
    - metatube.i.shikanime.studio
  parentRefs:
    - name: metatube
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
