apps/metatube/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metatube
spec:
  hostnames:
    - metatube.i.shikanime.studio
  parentRefs:
    - name: metatube
      sectionName: https
  rules:
    - backendRefs:
        - name: metatube
          port: http
