apps/metatube/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metatube
spec:
  defaultBackend:
    service:
      name: metatube
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - metatube
