apps/metatube/overlays/nishir-tailnet/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metatube
spec:
  hostnames:
    - metatube.taila659a.ts.net
  parentRefs:
    - name: metatube
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metatube-redirect
spec:
  hostnames:
    - metatube.taila659a.ts.net
  parentRefs:
    - name: metatube
      sectionName: http
